# libpicam

./: CMakeLists.txt  README.md
include/: picam.h
src/: CMakeLists.txt  picam.cpp  picam_c.cpp
